# tutor_hub_rag

./: .env.example  .gitignore  Dockerfile  LICENSE  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 64c519246b12_initial_schema.py  f5a616246134_timestamp_timezone_uploaded_at.py
app/: main.py
app/api/v1/routers/: documents.py  query.py  students.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  chunk.py  document.py  student.py
app/schemas/: document.py  query.py  student.py
app/services/: ingestion.py  query.py
tests/: conftest.py  test_ingestion.py  test_query.py  test_students.py
