[project]
name = "tutor-hub-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.138.0",
    "openai>=2.44.0",
    "pdfplumber>=0.11.10",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "psycopg2-binary>=2.9.12",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
